--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "mousetrap": "^1.6.5",
     "ng-apexcharts": "^1.8.0",
     "ng-click-outside2": "^12.0.0",
-    "ngx-color-picker": "^15.0.0",
-    "ngx-scrollbar": "^13.0.3",
+    "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
