--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ng-apexcharts": "^1.8.0",
     "ng-click-outside2": "^12.0.0",
     "ngx-socket-io": "^4.5.1",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
