--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
+    "@stomp/stompjs": "^7.0.0",
     "apexcharts": "^3.44.0",
     "bootstrap": "^5.2.3",
     "hammerjs": "^2.0.8",
@@ -31,9 +32,9 @@
     "mousetrap": "^1.6.5",
     "ng-apexcharts": "^1.8.0",
     "ng-click-outside2": "^12.0.0",
-    "ngx-socket-io": "^4.5.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -44,6 +45,7 @@
     "@angular/localize": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.200",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
